added implementation for session specific classroom